@@ -267,6 +267,11 @@ typedef BYTE BOOLEAN,*PBOOLEAN;
 #define THREAD_ALL_ACCESS (STANDARD_RIGHTS_REQUIRED|SYNCHRONIZE|0x3FF)
 #define EXCEPTION_NONCONTINUABLE	1
 #define EXCEPTION_MAXIMUM_PARAMETERS 15
+/*
+ * To prevent gcc compiler warnings, bracket these defines when initialising
+ * a  SID_IDENTIFIER_AUTHORITY, eg.
+ * SID_IDENTIFIER_AUTHORITY aNullSidAuthority = {SECURITY_NULL_SID_AUTHORITY};
+ */
 #define SECURITY_NULL_SID_AUTHORITY	{0,0,0,0,0,0}
 #define SECURITY_WORLD_SID_AUTHORITY	{0,0,0,0,0,1}
 #define SECURITY_LOCAL_SID_AUTHORITY	{0,0,0,0,0,2}
